--- a/style.css
+++ b/style.css
@@ -447,3 +447,21 @@ h1 {
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
+.numeric{
+    text-align: center;
+}
+
+.ferramentaCardSec{
+    display: flex;
+  justify-content: center;
+}
+
+
+
+.card-body.ferramentas ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 0;
+    margin: -10px 10px;
+}
+
