--- a/style.css
+++ b/style.css
@@ -494,6 +494,27 @@ h1 {
 }
 
 .devInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 900;
 }
+
+
+.three-columns {
+      columns: 3;
+      -webkit-columns: 3;
+      -moz-columns: 3;
+      list-style-type: disc;
+      padding-left: 20px;
+      gap: 20px;
+  }
+
+  .three-columns li {
+      break-inside: avoid;
+      margin-bottom: 0.5em;
+  }
+
